--- a/IOThunderboltFamily/Info.plist
+++ b/IOThunderboltFamily/Info.plist
@@ -19,6 +19,17 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>OSBundleLibraries</key>
-	<dict/>
+	<dict>
+		<key>com.apple.driver.AppleSMC</key>
+		<string>3.1.9</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>9.0</string>
+		<key>com.apple.kpi.iokit</key>
+		<string>9.0</string>
+		<key>com.apple.kpi.libkern</key>
+		<string>9.0</string>
+		<key>com.apple.kpi.mach</key>
+		<string>9.0</string>
+	</dict>
 </dict>
 </plist>
